Plugins/UnrealDotNet/Source/gen/UHeaderParser.java
// Generated from C:/Users/mrkriv/Documents/Unreal Projects/UnrealDotNet/Plugins/UnrealDotNet/Source/CodeGenerator/UHeader\UHeader.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class UHeaderParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, PtrQuant=11, RefQuant=12, Private=13, Protected=14, Public=15, 
		Inline=16, Explicit=17, Virtual=18, Class=19, Struct=20, Enum=21, Union=22, 
		Const=23, Final=24, Static=25, Extern=26, Mutable=27, Override=28, Template=29, 
		Friend=30, Operator=31, Typedef=32, Constexpr=33, BracketsOpen=34, BracketsClose=35, 
		Tilda=36, Delete=37, GCC_ALIGN=38, Namespace=39, Typename=40, DotDot=41, 
		SingleLineDerective=42, MultiLineDerective=43, Identifier=44, Literal=45, 
		SpecalSymbol=46, Whitespace=47, Newline=48, ExportComment=49, BlockComment=50, 
		LineComment=51;
	public static final int
		RULE_translationUnit = 0, RULE_namespaceUnit = 1, RULE_namespaceName = 2, 
		RULE_typePreDeclaration = 3, RULE_classDeclaration = 4, RULE_classOrStructOrEnum = 5, 
		RULE_classOrStruct = 6, RULE_classParentList = 7, RULE_classAlignDefine = 8, 
		RULE_classAlignValue = 9, RULE_classBody = 10, RULE_comment = 11, RULE_enumDeclaration = 12, 
		RULE_enumParent = 13, RULE_enumElementList = 14, RULE_enumElement = 15, 
		RULE_enumElementName = 16, RULE_unionDeclaration = 17, RULE_typeDefine = 18, 
		RULE_uDefine = 19, RULE_uDefineName = 20, RULE_uMeta = 21, RULE_uMetaParametrList = 22, 
		RULE_uMetaParametr = 23, RULE_uMetaParamKey = 24, RULE_uMetaParamValue = 25, 
		RULE_undefineBlock = 26, RULE_undefineContent = 27, RULE_constructor = 28, 
		RULE_constructorInitializerList = 29, RULE_constructorInitializer = 30, 
		RULE_method = 31, RULE_methodParamsList = 32, RULE_methodParametr = 33, 
		RULE_methodParametrName = 34, RULE_methodParametrDefaultValue = 35, RULE_value = 36, 
		RULE_methodBody = 37, RULE_methodBodyContent = 38, RULE_methodName = 39, 
		RULE_methodOperator = 40, RULE_property = 41, RULE_propertyName = 42, 
		RULE_propertyDefaultValue = 43, RULE_type = 44, RULE_isPtrQuant = 45, 
		RULE_isRefQuant = 46, RULE_typeName = 47, RULE_isVirtual = 48, RULE_isOverride = 49, 
		RULE_isConst = 50, RULE_isStatic = 51, RULE_isFriend = 52, RULE_isFinal = 53, 
		RULE_isDestructor = 54, RULE_isDelete = 55, RULE_isArray = 56, RULE_arrayLen = 57, 
		RULE_templateDefine = 58, RULE_templateParamList = 59, RULE_templateParam = 60, 
		RULE_templateParamType = 61, RULE_templateParamLiter = 62, RULE_accessSpecifierContainer = 63, 
		RULE_accessSpecifier = 64, RULE_preprocessDerective = 65;
	private static String[] makeRuleNames() {
		return new String[] {
			"translationUnit", "namespaceUnit", "namespaceName", "typePreDeclaration", 
			"classDeclaration", "classOrStructOrEnum", "classOrStruct", "classParentList", 
			"classAlignDefine", "classAlignValue", "classBody", "comment", "enumDeclaration", 
			"enumParent", "enumElementList", "enumElement", "enumElementName", "unionDeclaration", 
			"typeDefine", "uDefine", "uDefineName", "uMeta", "uMetaParametrList", 
			"uMetaParametr", "uMetaParamKey", "uMetaParamValue", "undefineBlock", 
			"undefineContent", "constructor", "constructorInitializerList", "constructorInitializer", 
			"method", "methodParamsList", "methodParametr", "methodParametrName", 
			"methodParametrDefaultValue", "value", "methodBody", "methodBodyContent", 
			"methodName", "methodOperator", "property", "propertyName", "propertyDefaultValue", 
			"type", "isPtrQuant", "isRefQuant", "typeName", "isVirtual", "isOverride", 
			"isConst", "isStatic", "isFriend", "isFinal", "isDestructor", "isDelete", 
			"isArray", "arrayLen", "templateDefine", "templateParamList", "templateParam", 
			"templateParamType", "templateParamLiter", "accessSpecifierContainer", 
			"accessSpecifier", "preprocessDerective"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "','", "'('", "')'", "'='", "'|'", "'<'", "'>'", "'['", 
			"']'", "'*'", "'&'", "'private'", "'protected'", "'public'", null, "'explicit'", 
			"'virtual'", "'class'", "'struct'", "'enum'", "'union'", "'const'", "'final'", 
			"'static'", "'extern'", "'mutable'", "'override'", "'template'", "'friend'", 
			"'operator'", "'typedef'", "'CONSTEXPR'", "'{'", "'}'", "'~'", "'delete'", 
			"'GCC_ALIGN'", "'namespace'", "'typename'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "PtrQuant", 
			"RefQuant", "Private", "Protected", "Public", "Inline", "Explicit", "Virtual", 
			"Class", "Struct", "Enum", "Union", "Const", "Final", "Static", "Extern", 
			"Mutable", "Override", "Template", "Friend", "Operator", "Typedef", "Constexpr", 
			"BracketsOpen", "BracketsClose", "Tilda", "Delete", "GCC_ALIGN", "Namespace", 
			"Typename", "DotDot", "SingleLineDerective", "MultiLineDerective", "Identifier", 
			"Literal", "SpecalSymbol", "Whitespace", "Newline", "ExportComment", 
			"BlockComment", "LineComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "UHeader.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public UHeaderParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class TranslationUnitContext extends ParserRuleContext {
		public List<TypePreDeclarationContext> typePreDeclaration() {
			return getRuleContexts(TypePreDeclarationContext.class);
		}
		public TypePreDeclarationContext typePreDeclaration(int i) {
			return getRuleContext(TypePreDeclarationContext.class,i);
		}
		public List<MethodContext> method() {
			return getRuleContexts(MethodContext.class);
		}
		public MethodContext method(int i) {
			return getRuleContext(MethodContext.class,i);
		}
		public List<ClassDeclarationContext> classDeclaration() {
			return getRuleContexts(ClassDeclarationContext.class);
		}
		public ClassDeclarationContext classDeclaration(int i) {
			return getRuleContext(ClassDeclarationContext.class,i);
		}
		public List<EnumDeclarationContext> enumDeclaration() {
			return getRuleContexts(EnumDeclarationContext.class);
		}
		public EnumDeclarationContext enumDeclaration(int i) {
			return getRuleContext(EnumDeclarationContext.class,i);
		}
		public List<PropertyContext> property() {
			return getRuleContexts(PropertyContext.class);
		}
		public PropertyContext property(int i) {
			return getRuleContext(PropertyContext.class,i);
		}
		public List<TypeDefineContext> typeDefine() {
			return getRuleContexts(TypeDefineContext.class);
		}
		public TypeDefineContext typeDefine(int i) {
			return getRuleContext(TypeDefineContext.class,i);
		}
		public List<UDefineContext> uDefine() {
			return getRuleContexts(UDefineContext.class);
		}
		public UDefineContext uDefine(int i) {
			return getRuleContext(UDefineContext.class,i);
		}
		public List<NamespaceUnitContext> namespaceUnit() {
			return getRuleContexts(NamespaceUnitContext.class);
		}
		public NamespaceUnitContext namespaceUnit(int i) {
			return getRuleContext(NamespaceUnitContext.class,i);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public List<PreprocessDerectiveContext> preprocessDerective() {
			return getRuleContexts(PreprocessDerectiveContext.class);
		}
		public PreprocessDerectiveContext preprocessDerective(int i) {
			return getRuleContext(PreprocessDerectiveContext.class,i);
		}
		public TranslationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_translationUnit; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UHeaderVisitor ) return ((UHeaderVisitor<? extends T>)visitor).visitTranslationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TranslationUnitContext translationUnit() throws RecognitionException {
		TranslationUnitContext _localctx = new TranslationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_translationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PtrQuant) | (1L << RefQuant) | (1L << Inline) | (1L << Virtual) | (1L << Class) | (1L << Struct) | (1L << Enum) | (1L << Const) | (1L << Static) | (1L << Extern) | (1L << Mutable) | (1L << Template) | (1L << Friend) | (1L << Typedef) | (1L << Constexpr) | (1L << Namespace) | (1L << SingleLineDerective) | (1L << MultiLineDerective) | (1L << Identifier) | (1L << ExportComment))) != 0)) {
				{
				setState(142);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(132);
					typePreDeclaration();
					}
					break;
				case 2:
					{
					setState(133);
					method();
					}
					break;
				case 3:
					{
					setState(134);
					classDeclaration();
					}
					break;
				case 4:
					{
					setState(135);
					enumDeclaration();
					}
					break;
				case 5:
					{
					setState(136);
					property();
					}
					break;
				case 6:
					{
					setState(137);
					typeDefine();
					}
					break;
				case 7:
					{
					setState(138);
					uDefine();
					}
					break;
				case 8:
					{
					setState(139);
					namespaceUnit();
					}
					break;
				case 9:
					{
					setState(140);
					comment();
					}
					break;
				case 10:
					{
					setState(141);
					preprocessDerective();
					}
					break;
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamespaceUnitContext extends ParserRuleContext {
		public TerminalNode Namespace() { return getToken(UHeaderParser.Namespace, 0); }
		public NamespaceNameContext namespaceName() {
			return getRuleContext(NamespaceNameContext.class,0);
		}
		public TerminalNode BracketsOpen() { return getToken(UHeaderParser.BracketsOpen, 0); }
		public TranslationUnitContext translationUnit() {
			return getRuleContext(TranslationUnitContext.class,0);
		}
		public TerminalNode BracketsClose() { return getToken(UHeaderParser.BracketsClose, 0); }
		public NamespaceUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespaceUnit; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UHeaderVisitor ) return ((UHeaderVisitor<? extends T>)visitor).visitNamespaceUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NamespaceUnitContext namespaceUnit() throws RecognitionException {
		NamespaceUnitContext _localctx = new NamespaceUnitContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_namespaceUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(Namespace);
			setState(148);
			namespaceName();
			setState(149);
			match(BracketsOpen);
			setState(150);
			translationUnit();
			setState(151);
			match(BracketsClose);
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(152);
				match(T__0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamespaceNameContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(UHeaderParser.Identifier, 0); }
		public NamespaceNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespaceName; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UHeaderVisitor ) return ((UHeaderVisitor<? extends T>)visitor).visitNamespaceName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NamespaceNameContext namespaceName() throws RecognitionException {
		NamespaceNameContext _localctx = new NamespaceNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_namespaceName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypePreDeclarationContext extends ParserRuleContext {
		public ClassOrStructOrEnumContext classOrStructOrEnum() {
			return getRuleContext(ClassOrStructOrEnumContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TemplateDefineContext templateDefine() {
			return getRuleContext(TemplateDefineContext.class,0);
		}
		public IsFriendContext isFriend() {
			return getRuleContext(IsFriendContext.class,0);
		}
		public TypePreDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typePreDeclaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UHeaderVisitor ) return ((UHeaderVisitor<? extends T>)visitor).visitTypePreDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypePreDeclarationContext typePreDeclaration() throws RecognitionException {
		TypePreDeclarationContext _localctx = new TypePreDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typePreDeclaration);
		int _la;
		try {
			setState(171);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Class:
			case Struct:
			case Enum:
			case Template:
				enterOuterAlt(_localctx, 1);
				{
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Template) {
					{
					setState(157);
					templateDefine();
					}
				}

				setState(160);
				classOrStructOrEnum();
				setState(161);
				type();
				setState(162);
				match(T__0);
				}
				break;
			case Friend:
				enterOuterAlt(_localctx, 2);
				{
				setState(164);
				isFriend();
				setState(166);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(165);
					classOrStructOrEnum();
					}
					break;
				}
				setState(168);
				type();
				setState(169);
				match(T__0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclarationContext extends ParserRuleContext {
		public ClassOrStructContext classOrStruct() {
			return getRuleContext(ClassOrStructContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode BracketsOpen() { return getToken(UHeaderParser.BracketsOpen, 0); }
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public TerminalNode BracketsClose() { return getToken(UHeaderParser.BracketsClose, 0); }
		public TemplateDefineContext templateDefine() {
			return getRuleContext(TemplateDefineContext.class,0);
		}
		public IsFinalContext isFinal() {
			return getRuleContext(IsFinalContext.class,0);
		}
		public TerminalNode DotDot() { return getToken(UHeaderParser.DotDot, 0); }
		public ClassParentListContext classParentList() {
			return getRuleContext(ClassParentListContext.class,0);
		}
		public ClassAlignDefineContext classAlignDefine() {
			return getRuleContext(ClassAlignDefineContext.class,0);
		}
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UHeaderVisitor ) return ((UHeaderVisitor<? extends T>)visitor).visitClassDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Template) {
				{
				setState(173);
				templateDefine();
				}
			}

			setState(176);
			classOrStruct();
			setState(177);
			type();
			setState(179);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Final) {
				{
				setState(178);
				isFinal();
				}
			}

			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DotDot) {
				{
				setState(181);
				match(DotDot);
				setState(182);
				classParentList();
				}
			}

			setState(185);
			match(BracketsOpen);
			setState(186);
			classBody();
			setState(187);
			match(BracketsClose);
			setState(189);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GCC_ALIGN) {
				{
				setState(188);
				classAlignDefine();
				}
			}

			setState(191);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassOrStructOrEnumContext extends ParserRuleContext {
		public TerminalNode Class() { return getToken(UHeaderParser.Class, 0); }
		public TerminalNode Struct() { return getToken(UHeaderParser.Struct, 0); }
		public TerminalNode Enum() { return getToken(UHeaderParser.Enum, 0); }
		public ClassOrStructOrEnumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classOrStructOrEnum; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UHeaderVisitor ) return ((UHeaderVisitor<? extends T>)visitor).visitClassOrStructOrEnum(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassOrStructOrEnumContext classOrStructOrEnum() throws RecognitionException {
		ClassOrStructOrEnumContext _localctx = new ClassOrStructOrEnumContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_classOrStructOrEnum);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Class) | (1L << Struct) | (1L << Enum))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassOrStructContext extends ParserRuleContext {
		public TerminalNode Class() { return getToken(UHeaderParser.Class, 0); }
		public TerminalNode Struct() { return getToken(UHeaderParser.Struct, 0); }
		public ClassOrStructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classOrStruct; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UHeaderVisitor ) return ((UHeaderVisitor<? extends T>)visitor).visitClassOrStruct(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassOrStructContext classOrStruct() throws RecognitionException {
		ClassOrStructContext _localctx = new ClassOrStructContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_classOrStruct);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(195);
			_la = _input.LA(1);
			if ( !(_la==Class || _la==Struct) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassParentListContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public AccessSpecifierContext accessSpecifier() {
			return getRuleContext(AccessSpecifierContext.class,0);
		}
		public ClassParentListContext classParentList() {
			return getRuleContext(ClassParentListContext.class,0);
		}
		public ClassParentListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classParentList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UHeaderVisitor ) return ((UHeaderVisitor<? extends T>)visitor).visitClassParentList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassParentListContext classParentList() throws RecognitionException {
		ClassParentListContext _localctx = new ClassParentListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_classParentList);
		int _la;
		try {
			setState(208);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(198);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Private) | (1L << Protected) | (1L << Public))) != 0)) {
					{
					setState(197);
					accessSpecifier();
					}
				}

				setState(200);
				type();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(202);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Private) | (1L << Protected) | (1L << Public))) != 0)) {
					{
					setState(201);
					accessSpecifier();
					}
				}

				setState(204);
				type();
				setState(205);
				match(T__1);
				setState(206);
				classParentList();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
